--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
     "name": "application-name"
+  , "description": "Sports.ru configs storage"
+  , "author": [
+  			"Vladimir Tsvang <tsvang@sports.ru>"
+  		,	"Ivan Artamonov <artamonov@sports.ru>"
+  	]
+  , "keywords": [
+         "sports.ru"
+      ,  "memcached"
+      ,  "mongodb"
+      ,  "storage"
+      ,  "coffeescript"
+    ]
+  , "bugs": {
+        "name": "https://github.com/sportsru/config_storage/issues"
+    }
+  , "repository": {
+        "url": "https://github.com:sportsru/config_storage"
+  	}
+  , "main": "./app.js"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.10"
-	, "coffee-script": ">=1.3.3"
-	, "memcached": ">=0.0.11"
-	, "mongoose": ">= 2.6.5"
-  }
+        "express": "2.5.10"
+	  , "memcached": ">=0.0.11"
+	  , "mongoose": ">= 2.6.5"
+    }
+  , "devDependencies": {
+        "coffee-script": ">=1.3.3"
+    }
+  , "engines": {
+        "node": "*"
+    }
 }
