--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express": "2.5.10"
 	  , "memcached": ">=0.0.11"
 	  , "mongoose": ">= 2.6.5"
+    , "commander": ">=1.0.0"
     }
   , "devDependencies": {
         "coffee-script": ">=1.3.3"
